# SnackBox

./: .gitignore  CMakeLists.txt
data/: index.tsv
data/docs/: index-format.html  index.tsv  routing.html
public/: index.html
src/: http.cpp  http.hpp  main.cpp  router.cpp  router.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
tests/: test_main.cpp
